this is my second changes

--- a/first.html
+++ b/first.html
@@ -3,4 +3,4 @@ I am a software engineer.
 I love coding and solving problems.
 I also enjoy reading books and traveling.
 My favorite programming languages are Python and JavaScript.
-I am passionate about learning new technologies and improving my skills.
+iit kgp
